# atari

./: README.md  evaluate.py  pyproject.toml  train.py
logs/: evaluations.npz
tensorboard_logs/PPO_1/: events.out.tfevents.1729408884.Patricks-MacBook-Pro-2.local.50409.0  events.out.tfevents.1729417940.clean-light-smashes-fin-01.6024.0
